--- a/Port-plaisance_html/detail-catway.html
+++ b/Port-plaisance_html/detail-catway.html
@@ -13,7 +13,7 @@
     </ul>
     <script>
       
-fetch('/catways/catways')
+fetch('http://localhost:3000/catways/catways')
   .then(response => response.json())
   .then(catways => {
     const catwaysList = document.getElementById('catwaysList');
