--- a/Port-plaisance_html/index.html
+++ b/Port-plaisance_html/index.html
@@ -20,14 +20,14 @@
         
         <a href="documentation.html" target="_blank">Documentation de l'API</a>
         <h2>Se connecter</h2>
-        <form id="loginForm" action="/users/login" method="POST">
+        <form id="loginForm" action="http://localhost:3000/users/login" method="POST">
            <input type="email" name="email" placeholder="Email" required>
            <input type="password" name="password" placeholder="Mot de passe" required>
            <button type="submit">Se connecter</button>
         </form>
 
         <h2>S'inscrire</h2>
-        <form id="signupForm" action="/users/signup" method="POST">
+        <form id="signupForm" action="http://localhost:3000/users/signup" method="POST">
             <input type="text" name="name" placeholder="Nom" required>
             <input type="email" name="email" placeholder="Email" required>
             <input type="password" name="password" placeholder="Mot de passe" required>
