--- a/Port-plaisance_html/reservations.html
+++ b/Port-plaisance_html/reservations.html
@@ -13,7 +13,7 @@
     <script>
 
         function getReservations() {
-            fetch('/reservations/reservations')
+            fetch('http://localhost:3000/reservations/reservations')
                 .then(response => response.json())
                 .then(data => {
                   
